# sataplan

./: .gitignore  README.md  tester.py
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  dependencies.py  main.py  super.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 993788023de7_init.py  bd36a16beb91_add_user_and_profile_tables.py  c70c6b83deca_init.py  d4fe4405e8dc_unique_is_added.py  d96510db8fd2_cover_image_is_added.py  d9c06edb3c22_add_user_id_is_corected.py
backend/app/crud/: goals.py  users.py
backend/app/models/: __init__.py  goals.py  motivations.py  users.py
backend/app/routes/: auth.py  goals.py  motivations.py  qrcode.py  qrcodenew.py  search.py
backend/app/schemas/: goals.py  motivations.py  users.py
backend/app/services/: qrcode.py  security.py  uploadimg.py
backend/app/utils/: goal.py  supabas.py
